--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseURL = "https://example.com"
+baseURL = "https://https://tvanzyl.github.io/"
 languageCode = "en"
 DefaultContentLanguage = "en"
-title = "Website of Jane Doe"
+title = "Website of Terence van Zyl"
 theme = "anatole"
 summarylength = 10
 enableEmoji = true
