First Stab at Web Presence

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://https://tvanzyl.github.io/"
+baseURL = "https://tvanzyl.github.io/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Website of Terence van Zyl"
