--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ author = "Terence L. van Zyl"
 description = """
 Prof. Terence L. van Zyl
 @ Unversity of Johannesburg
+Institute for Intelligent Systems
 """
 profilePicture = "images/profile.jpg"
 keywords = ""
