--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ use = "katex"  # options: "katex", "mathjax". default is "katex".
 # use 'fab' when brand icons, use 'fas' when standard solid icons.
 [[params.socialIcons]]
 icon = "fab fa-linkedin"
-title = "Linkedin"
+title = "LinkedIn"
 url = "https://www.linkedin.com/in/terence-van-zyl-b9b00b4/"
 
 [[params.socialIcons]]
@@ -54,12 +54,12 @@ url = "https://github.com/tvanzyl"
 
 [[params.socialIcons]]
 icon = "fab fa-orcid"
-title = "orcid"
+title = "ORCID"
 url = "http://orcid.org/0000-0003-4281-630X"
 
 [[params.socialIcons]]
 icon = "fab fa-google"
-title = "google-scholar"
+title = "Google Scholar"
 url = "https://scholar.google.com/citations?user=9DLVr5oAAAAJ&hl=en"
 
 [[params.socialIcons]]
@@ -69,7 +69,7 @@ url = "mailto:tvanzyl@uj.ac.za"
 
 [[params.socialIcons]]
 icon = "fas fa-calendar"
-title = "calendly"
+title = "Calendly"
 url = "https://calendly.com/tvanzyl/20min"
 
 ## Menu items
