Changed Booking to Google

--- a/config.toml
+++ b/config.toml
@@ -70,7 +70,7 @@ url = "mailto:tvanzyl@uj.ac.za"
 [[params.socialIcons]]
 icon = "fas fa-calendar"
 title = "Calendly"
-url = "https://calendly.com/tvanzyl/20min"
+url = "https://calendar.app.google/v6fDTJyD5QwrizTJ8"
 
 ## Menu items
 
