--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ url = "mailto:tvanzyl@uj.ac.za"
 
 [[params.socialIcons]]
 icon = "fas fa-calendar"
-title = "Calendly"
+title = "Calender"
 url = "https://calendar.app.google/v6fDTJyD5QwrizTJ8"
 
 ## Menu items
